--- a/02_data_statistics.Rmd
+++ b/02_data_statistics.Rmd
@@ -5,7 +5,43 @@
 load("resources/data.Rdata")
 ```
 
+## Sequencing reads statistics
+
+```{r reads_stats}
+data_stats$raw_reads %>% sum()
+data_stats$raw_reads %>% mean()
+data_stats$raw_reads %>% sd()
+```
+
 ## DNA fractions
+```{r data_fractions_stats}
+
+#Per sample type
+data_stats %>%
+    mutate(mapped_host_perc=mapped_SceUnd/trimmed_reads) %>%
+    left_join(., sample_metadata, by = join_by(sample == sample)) %>%
+    group_by(type) %>%
+    summarise(mean=mean(mapped_host_perc),sd=sd(mapped_host_perc))
+
+#Overall
+data_stats %>%
+    mutate(mapped_perc=mapped_mags/trimmed_reads) %>%
+    summarise(mean=mean(mapped_perc),sd=sd(mapped_perc))
+
+#Per sample type
+data_stats %>%
+    mutate(mapped_perc=mapped_mags/trimmed_reads) %>%
+    left_join(., sample_metadata, by = join_by(sample == sample)) %>%
+    group_by(type) %>%
+    summarise(mean=mean(mapped_perc),sd=sd(mapped_perc))
+```
+
+```{r mapping_test}
+data_stats %>%
+  left_join(., sample_metadata, by = join_by(sample == sample)) %>%
+  lmerTest::lmer(mapped_SceUnd ~ type + (1 | individual), data = ., REML = FALSE) %>%
+  summary()
+```
 
 ```{r data_fractions_plot, message=FALSE, warning=FALSE, fig.height=6, fig.width=10, fig.fullwidth=TRUE}
 data_stats %>%
@@ -17,12 +53,13 @@ data_stats %>%
   pivot_longer(-sample) %>%
   separate(col = "sample", into = c("sample", "tissue"), sep = "\\.", remove = FALSE) %>%
   mutate(name=factor(name,levels=c("low_quality","mapped_SceUnd","unmapped_reads","mapped_mags"))) %>%
+  mutate(sample=factor(sample,levels=c("Sg1","Sg2","Sg3","Sg4","Sg5","Sg6","Sg7","Sg8","Sg9","Sg10"))) %>%
   ggplot(aes(x = sample, y = value, fill = name)) +
       geom_bar(stat = "identity", position = "fill") +
       scale_fill_manual(name="Sequence type",
                     breaks=c("low_quality","mapped_SceUnd","unmapped_reads","mapped_mags"),
                     labels=c("Low quality","Mapped to host","Unmapped","Mapped to MAGs"),
-                    values=c("#CCCCCC", "#178a94", "#ee8080", "#d03161"))+
+                    values=c("#CCCCCC", "#bcdee1", "#d8b8a3","#93655c"))+
       facet_wrap(~tissue, scales = "free", labeller = labeller(tissue = c(cloaca="Cloaca",feces="Faeces"))) +
       theme_minimal() +
       labs(y="DNA sequence fraction",x="Samples")
@@ -52,6 +89,7 @@ data_stats %>%
     )
   ) %>%
   separate(col = "sample", into = c("sample", "tissue"), sep = "\\.", remove = FALSE) %>%
+  mutate(sample=factor(sample,levels=rev(c("Sg1","Sg2","Sg3","Sg4","Sg5","Sg6","Sg7","Sg8","Sg9","Sg10")))) %>%
   ggplot(aes(x = value, y = sample, color = proportion)) +
       geom_line(aes(group = sample), color = "#f8a538") +
       geom_point() +
